--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "apollo-boost": "^0.1.10",
     "apollo-link-schema": "^1.1.0",
     "apollo-upload-client": "^9.0.0",
+    "axios": "0.18.0",
     "classnames": "2.2.5",
     "es6-shim": "^0.35.4",
     "formik": "1.5.4",
@@ -19,7 +20,8 @@
     "node-sass": "^4.11.0",
     "primeicons": "^1.0.0-beta.10",
     "primereact": "^3.1.0",
-    "react": "^16.4.1",
+    "query-string": "5.1.1",
+    "react": "16.8.6",
     "react-apollo": "^2.4.1",
     "react-app-polyfill": "^0.1.3",
     "react-dom": "^16.4.1",
@@ -35,6 +37,7 @@
     "@types/graphql": "^14.0.7",
     "@types/jest": "24.0.11",
     "@types/node": "^10.5.2",
+    "@types/query-string": "6.3.0",
     "@types/react": "^16.4.6",
     "@types/react-dom": "^16.0.6",
     "archiver": "^3.0.0",
@@ -43,12 +46,12 @@
     "babel-loader": "^8.0.5",
     "connect": "3.6.6",
     "console-emoji": "0.0.2",
-    "ng-apimock": "1.4.7",
     "cypress": "^3.1.4",
     "dotenv": "^6.2.0",
     "eslint-plugin-prettier": "^2.6.2",
     "fs-extra": "^7.0.1",
     "husky": "^0.14.3",
+    "ng-apimock": "1.4.7",
     "npm-run-all": "4.1.5",
     "prettier": "1.17.0",
     "pretty-quick": "1.10.0",
@@ -60,13 +63,15 @@
     "typescript": "3.4.5"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "run-p -r mockserver start:app",
+    "start:app": "react-scripts start",
     "build": "react-scripts build",
     "build:dnn": "node create-dnn-module.js",
     "build:prod": "npm-run-all build build:dnn",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "precommit": "pretty-quick --staged",
+    "mockserver": "node ./mocks/mocks.js",
     "storybook": "start-storybook -p 9001 -c .storybook",
     "cypress:open": "cypress open",
     "prettier:all": "prettier --write \"**/*.{css,js,json,md,scss,ts,tsx,html}\""
