--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-#REACT_APP_GRAPHQL_URL=https://api.adviseren.erkenningen.nl/graphql
-REACT_APP_GRAPHQL_URL=http://dev.erkenningen.nl:3010/graphql
+REACT_APP_GRAPHQL_URL="/graphql"
+# REACT_APP_GRAPHQL_URL=http://dev.erkenningen.nl:3010/graphql
 REACT_APP_DNN_LOGIN_URL="/Default.aspx?tabid=154&returnurl=%2fDefault.aspx%3ftabid%3d293"
 REACT_APP_DNN_WEB_API="/DesktopModules/AOCRaad.Erkenningen.WebAPI/API"
 
