--- a/package.json
+++ b/package.json
@@ -3,63 +3,61 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "@types/apollo-upload-client": "^8.1.0",
-    "@types/react-router-dom": "4.3.2",
-    "@types/yup": "^0.26.2",
-    "apollo-boost": "^0.1.10",
-    "apollo-link-schema": "^1.1.0",
-    "apollo-upload-client": "^9.0.0",
-    "axios": "0.18.0",
-    "classnames": "2.2.5",
-    "es6-shim": "^0.35.4",
+    "apollo-boost": "0.4.0",
+    "apollo-link-schema": "1.2.2",
+    "classnames": "2.2.6",
+    "es6-shim": "0.35.5",
     "formik": "1.5.4",
-    "graphql": "^0.13.2",
-    "graphql-tag": "^2.9.2",
-    "graphql-tools": "^3.0.5",
-    "moment": "^2.22.2",
-    "node-sass": "^4.11.0",
-    "primeicons": "^1.0.0-beta.10",
-    "primereact": "^3.1.0",
-    "query-string": "5.1.1",
+    "graphql": "14.3.0",
+    "graphql-tag": "2.10.1",
+    "graphql-tools": "4.0.4",
+    "moment": "2.24.0",
+    "node-sass": "4.12.0",
+    "primeicons": "1.0.0",
+    "primereact": "3.1.4",
+    "query-string": "6.5.0",
     "react": "16.8.6",
-    "react-apollo": "^2.4.1",
-    "react-app-polyfill": "^0.1.3",
-    "react-dom": "^16.4.1",
-    "react-moment": "^0.8.1",
-    "react-router-dom": "^4.3.1",
-    "react-transition-group": "2.2.1",
+    "react-apollo": "2.5.6",
+    "react-app-polyfill": "1.0.1",
+    "react-dom": "16.8.6",
+    "react-moment": "0.9.2",
+    "react-router-dom": "5.0.0",
+    "react-transition-group": "4.0.1",
     "yup": "0.27.0"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.7.2",
-    "@storybook/react": "^4.1.13",
-    "@types/classnames": "^2.2.7",
-    "@types/graphql": "^14.0.7",
-    "@types/jest": "24.0.11",
-    "@types/node": "^10.5.2",
+    "@types/apollo-upload-client": "8.1.1",
+    "@types/react-router-dom": "4.3.3",
+    "@types/yup": "0.26.13",
+    "@fortawesome/fontawesome-free": "5.8.2",
+    "@storybook/react": "5.0.11",
+    "@types/classnames": "2.2.7",
+    "@types/graphql": "14.2.0",
+    "@types/jest": "24.0.13",
+    "@types/node": "12.0.2",
     "@types/query-string": "6.3.0",
-    "@types/react": "^16.4.6",
-    "@types/react-dom": "^16.0.6",
-    "archiver": "^3.0.0",
-    "awesome-typescript-loader": "^5.2.1",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.5",
+    "@types/react": "16.8.17",
+    "@types/react-dom": "16.8.4",
+    "archiver": "3.0.0",
+    "awesome-typescript-loader": "5.2.1",
+    "babel-core": "6.26.3",
+    "babel-loader": "8.0.6",
     "connect": "3.6.6",
     "console-emoji": "0.0.2",
-    "cypress": "^3.1.4",
-    "dotenv": "^6.2.0",
-    "eslint-plugin-prettier": "^2.6.2",
-    "fs-extra": "^7.0.1",
+    "cypress": "3.3.0",
+    "dotenv": "8.0.0",
+    "eslint-plugin-prettier": "3.1.0",
+    "fs-extra": "8.0.1",
     "husky": "^0.14.3",
-    "ng-apimock": "1.4.7",
+    "ng-apimock": "1.4.8",
     "npm-run-all": "4.1.5",
-    "prettier": "1.17.0",
+    "prettier": "1.17.1",
     "pretty-quick": "1.10.0",
-    "react-scripts": "3.0.0",
-    "tslint": "^5.13.0",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-eslint-rules": "^5.3.1",
-    "tslint-react": "^3.6.0",
+    "react-scripts": "3.0.1",
+    "tslint": "5.16.0",
+    "tslint-config-prettier": "1.18.0",
+    "tslint-eslint-rules": "5.4.0",
+    "tslint-react": "4.0.0",
     "typescript": "3.4.5"
   },
   "scripts": {
