refactor(app): use @erkenningen/ui

--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ REACT_APP_DNN_WEB_API="/DesktopModules/AOCRaad.Erkenningen.WebAPI/API"
 SKIP_PREFLIGHT_CHECK=true
 
 MODULE_NAME=SearchCourse
+PUBLIC_URL=/DesktopModules/AOCRaad.Erkenningen.SearchCourse
