--- a/.env.production
+++ b/.env.production
@@ -3,3 +3,4 @@ REACT_APP_DNN_LOGIN_URL="/Default.aspx?tabid=154&returnurl=%2fDefault.aspx%3ftab
 REACT_APP_DNN_WEB_API="/DesktopModules/AOCRaad.Erkenningen.WebAPI/API"
 
 MODULE_NAME=SearchCourse
+PUBLIC_URL=/DesktopModules/AOCRaad.Erkenningen.SearchCourse
