--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@erkenningen/build": "1.0.7",
+    "@erkenningen/ui": "1.0.38",
     "apollo-boost": "0.4.2",
     "apollo-link-schema": "1.2.3",
     "classnames": "2.2.6",
@@ -64,8 +66,9 @@
     "start": "run-p -r mockserver start:app",
     "start:app": "react-scripts start",
     "build": "react-scripts build",
-    "build:dnn": "node create-dnn-module.js",
+    "build:dnn": "node ./node_modules/@erkenningen/build/scripts/create-dnn-module.js",
     "build:prod": "npm-run-all build build:dnn",
+    "build:deploy": "node ./node_modules/@erkenningen/build/scripts/create-deploy-file.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "precommit": "pretty-quick --staged",
