fix(package): fix package name and envs

--- a/.env
+++ b/.env
@@ -1,9 +1,8 @@
 REACT_APP_GRAPHQL_URL="/graphql"
 # REACT_APP_GRAPHQL_URL=http://dev.erkenningen.nl:3010/graphql
 REACT_APP_DNN_LOGIN_URL="/Default.aspx?tabid=154&returnurl=%2fDefault.aspx%3ftabid%3d293"
-REACT_APP_DNN_WEB_API="/DesktopModules/AOCRaad.Erkenningen.WebAPI/API"
 
 SKIP_PREFLIGHT_CHECK=true
 
-MODULE_NAME=SearchCourse
-PUBLIC_URL=/DesktopModules/AOCRaad.Erkenningen.SearchCourse
+MODULE_NAME=SearchCourseAndRegister
+PUBLIC_URL=/DesktopModules/AOCRaad.Erkenningen.SearchCourseAndRegister
