--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,5 @@
 REACT_APP_GRAPHQL_URL=https://api.erkenningen.nl/graphql
 REACT_APP_DNN_LOGIN_URL="/Default.aspx?tabid=154&returnurl=%2fDefault.aspx%3ftabid%3d293"
-REACT_APP_DNN_WEB_API="/DesktopModules/AOCRaad.Erkenningen.WebAPI/API"
 
-MODULE_NAME=SearchCourse
-PUBLIC_URL=/DesktopModules/AOCRaad.Erkenningen.SearchCourse
+MODULE_NAME=SearchCourseAndRegister
+PUBLIC_URL=/DesktopModules/AOCRaad.Erkenningen.SearchCourseAndRegister
