chore(env.production): update url for adviseren

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-REACT_APP_GRAPHQL_URL=https://api.erkenningen.nl/graphql
+REACT_APP_GRAPHQL_URL=https://api.adviseren.erkenningen.nl/graphql
 REACT_APP_DNN_LOGIN_URL="/Default.aspx?tabid=154&returnurl=%2fDefault.aspx%3ftabid%3d293"
 
 MODULE_NAME=SearchCourseAndRegister
