--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 REACT_APP_GRAPHQL_URL="/graphql"
 # REACT_APP_GRAPHQL_URL=http://dev.erkenningen.nl:3010/graphql
-REACT_APP_DNN_LOGIN_URL="/Default.aspx?tabid=154&returnurl=%2fDefault.aspx%3ftabid%3d293"
+REACT_APP_DNN_LOGIN_URL="/Default.aspx?tabid=154"
 
 SKIP_PREFLIGHT_CHECK=true
 
