fix(graphql-url): update url

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-REACT_APP_GRAPHQL_URL=https://api.adviseren.erkenningen.nl/graphql
+REACT_APP_GRAPHQL_URL=https://api.acceptatie.erkenningen.nl/graphql
 REACT_APP_DNN_LOGIN_URL="/Default.aspx?tabid=154"
 
 MODULE_NAME=SearchCourseAndRegister
