chore: added netlify toml with CORS settings

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,8 @@
 [context.production.headers]
   for = "/*"
-  [headers.values]
+  [context.production.headers.values]
     ACCESS-CONTROL-ALLOW-ORIGIN = "https://acceptatie.erkenningen.nl"
 [context.deploy-preview.headers]
   for = "/*"
-  [headers.values]
+  [context.deploy-preview.headers.values]
     ACCESS-CONTROL-ALLOW-ORIGIN = "https://acceptatie.erkenningen.nl"
