chore: just use cors all *

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [[headers]]
   for = "/*"
   [headers.values]
-    ACCESS-CONTROL-ALLOW-ORIGIN = "CORS_DOMAIN_PLACEHOLDER"
+    ACCESS-CONTROL-ALLOW-ORIGIN = "*"
