--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "start": "run-p -r mockserver start:app",
     "start:app": "react-scripts start",
     "build": "react-scripts build",
-    "build:netlify": "cp public/index.netlify.html public/index.html && react-scripts build && sed -i s@CORS_DOMAIN_PLACEHOLDER@${DEPLOY_PRIME_URL}@g netlify.toml",
+    "build:netlify": "cp public/index.netlify.html public/index.html && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "precommit": "pretty-quick --staged",
