--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-moment": "0.9.2",
     "react-router-dom": "5.0.1",
     "react-transition-group": "4.1.1",
+    "rewire": "^4.0.1",
     "yup": "0.27.0"
   },
   "devDependencies": {
@@ -67,7 +68,7 @@
     "start": "run-p -r mockserver start:app",
     "start:app": "react-scripts start",
     "build": "react-scripts build",
-    "build:netlify": "cp public/index.netlify.html public/index.html && react-scripts build",
+    "build:netlify": "cp public/index.netlify.html public/index.html &&  node ./build.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "precommit": "pretty-quick --staged",
