--- a/package.json
+++ b/package.json
@@ -3,38 +3,32 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "@erkenningen/build": "1.0.7",
     "@erkenningen/config": "^1.0.7",
-    "@erkenningen/ui": "^1.0.54",
+    "@erkenningen/ui": "^2.0.1",
     "apollo-boost": "0.4.2",
     "apollo-link-schema": "1.2.3",
-    "classnames": "2.2.6",
+    "date-fns": "2.0.0-beta.3",
     "es6-shim": "0.35.5",
     "formik": "1.5.7",
     "graphql": "14.3.1",
     "graphql-tag": "2.10.1",
-    "graphql-tools": "4.0.4",
-    "moment": "2.24.0",
-    "node-sass": "4.12.0",
-    "primeicons": "1.0.0",
-    "primereact": "3.1.4",
+    "primeicons": "2.0.0",
+    "primereact": "3.1.8",
     "query-string": "6.7.0",
     "react": "16.8.6",
     "react-apollo": "2.5.6",
     "react-app-polyfill": "1.0.1",
     "react-dom": "16.8.6",
-    "react-moment": "0.9.2",
     "react-router-dom": "5.0.1",
-    "react-transition-group": "4.1.1",
     "rewire": "^4.0.1",
     "yup": "0.27.0"
   },
   "devDependencies": {
-    "@types/apollo-upload-client": "8.1.1",
-    "@types/react-router-dom": "4.3.4",
-    "@types/yup": "0.26.16",
+    "@erkenningen/build": "1.0.7",
     "@fortawesome/fontawesome-free": "5.9.0",
+    "@reach/router": "1.2.1",
     "@storybook/react": "5.1.8",
+    "@types/apollo-upload-client": "8.1.1",
     "@types/classnames": "2.2.8",
     "@types/graphql": "14.2.0",
     "@types/jest": "24.0.14",
@@ -42,22 +36,32 @@
     "@types/query-string": "6.3.0",
     "@types/react": "16.8.20",
     "@types/react-dom": "16.8.4",
+    "@types/react-router-dom": "4.3.4",
+    "@types/yup": "0.26.16",
     "archiver": "3.0.0",
     "awesome-typescript-loader": "5.2.1",
+    "axios": "0.19.0",
     "babel-core": "6.26.3",
     "babel-loader": "8.0.6",
+    "classnames": "2.2.6",
     "connect": "3.7.0",
     "console-emoji": "0.0.2",
     "cypress": "3.3.0",
     "dotenv": "8.0.0",
     "eslint-plugin-prettier": "3.1.0",
     "fs-extra": "8.0.1",
+    "gatsby": "2.13.50",
+    "graphql-tools": "4.0.4",
     "husky": "^0.14.3",
     "ng-apimock": "1.4.8",
+    "node-sass": "4.12.0",
     "npm-run-all": "4.1.5",
     "prettier": "1.18.2",
     "pretty-quick": "1.11.0",
+    "react-html-parser": "2.0.2",
     "react-scripts": "3.0.1",
+    "react-transition-group": "4.2.2",
+    "source-map-explorer": "2.0.1",
     "tslint": "5.17.0",
     "tslint-config-prettier": "1.18.0",
     "tslint-eslint-rules": "5.4.0",
@@ -78,7 +82,8 @@
     "prettier:all": "prettier --write \"**/*.{css,js,json,md,scss,ts,tsx,html}\"",
     "build:dnn": "node ./node_modules/@erkenningen/build/scripts/create-dnn-module.js",
     "build:prod": "npm-run-all build build:dnn",
-    "build:deploy": "node ./node_modules/@erkenningen/build/scripts/create-deploy-file.js"
+    "build:deploy": "node ./node_modules/@erkenningen/build/scripts/create-deploy-file.js",
+    "analyze": "source-map-explorer 'build/static/js/*.js'"
   },
   "proxy": "http://localhost:4000",
   "browserslist": [
