--- a/netlify.toml
+++ b/netlify.toml
@@ -4,7 +4,7 @@
     ACCESS-CONTROL-ALLOW-ORIGIN = "*"
 [build]
   publish = "public"
-  command = "npm run build"
+  command = "npm run build:netlify"
 [build.environment]
   YARN_VERSION = "1.3.2"
   YARN_FLAGS = "--no-ignore-optional"
