--- a/netlify.toml
+++ b/netlify.toml
@@ -3,7 +3,7 @@
   [headers.values]
     ACCESS-CONTROL-ALLOW-ORIGIN = "*"
 [build]
-  publish = "public"
+  publish = "build"
   command = "npm run build:netlify"
 [build.environment]
   YARN_VERSION = "1.3.2"
