--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "16.9.0",
     "react-router-dom": "5.0.1",
     "rewire": "^4.0.1",
+    "use-query-params": "0.4.1",
     "yup": "0.27.0"
   },
   "devDependencies": {
