feat: upgrade to graphql codegen

--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
 SKIP_PREFLIGHT_CHECK=true
 
 MODULE_NAME=SearchCourseAndRegister
-PUBLIC_URL=/DesktopModules/AOCRaad.Erkenningen.SearchCourseAndRegister
+# PUBLIC_URL=/DesktopModules/AOCRaad.Erkenningen.SearchCourseAndRegister
+PUBLIC_URL=/
+
+PORT=3031
