--- a/package.json
+++ b/package.json
@@ -3,87 +3,78 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "@apollo/react-hooks": "^3.1.1",
-    "@erkenningen/config": "^1.0.7",
-    "@erkenningen/ui": "^2.0.4",
-    "apollo-boost": "0.4.4",
-    "apollo-link-schema": "1.2.4",
-    "date-fns": "2.2.1",
+    "@apollo/client": "3.3.6",
+    "@erkenningen/config": "1.0.7",
+    "@erkenningen/ui": "5.0.11",
+    "@graphql-codegen/cli": "1.20.0",
+    "@graphql-codegen/introspection": "1.18.1",
+    "@graphql-codegen/typescript": "1.20.0",
+    "@graphql-codegen/typescript-operations": "1.17.13",
+    "@graphql-codegen/typescript-react-apollo": "2.2.1",
+    "@fortawesome/fontawesome-free": "5.9.0",
+    "@reach/router": "1.3.4",
+    "eslint": "^7.17.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "7.22.0",
+    "eslint-plugin-react-hooks": "4.2.0",
+    "eslint-config-react-app": "6.0.0",
+    "classnames": "2.2.6",
+    "date-fns": "2.16.1",
     "es6-shim": "0.35.5",
-    "formik": "1.5.8",
+    "formik": "2.2.6",
     "graphql": "14.5.6",
     "graphql-tag": "2.10.1",
-    "primeicons": "2.0.0",
-    "primereact": "3.2.0",
-    "query-string": "6.8.3",
-    "react": "16.9.0",
-    "react-app-polyfill": "1.0.3",
-    "react-dom": "16.9.0",
-    "react-router-dom": "5.0.1",
-    "rewire": "^4.0.1",
-    "use-query-params": "0.4.1",
-    "yup": "0.27.0"
+    "node-sass": "4.12.0",
+    "primeicons": "4.1.0",
+    "primereact": "5.0.2",
+    "query-string": "6.13.8",
+    "react": "17.0.1",
+    "react-scripts": "4.0.1",
+    "react-transition-group": "4.3.0",
+    "react-app-polyfill": "2.0.0",
+    "react-dom": "17.0.1",
+    "react-router-dom": "5.2.0",
+    "use-query-params": "1.1.9",
+    "ts-essentials": "^7.0.0",
+    "typescript": "4.1.3",
+    "yup": "0.32.8"
   },
   "devDependencies": {
     "@erkenningen/build": "1.0.7",
-    "@fortawesome/fontawesome-free": "5.9.0",
-    "@reach/router": "1.2.1",
-    "@storybook/react": "5.1.8",
     "@types/classnames": "2.2.9",
-    "@types/graphql": "14.5.0",
     "@types/jest": "24.0.18",
     "@types/node": "12.0.8",
     "@types/query-string": "6.3.0",
-    "@types/react": "16.9.2",
-    "@types/react-dom": "16.9.0",
-    "@types/react-router-dom": "4.3.5",
-    "@types/yup": "0.26.24",
+    "@types/react": "17.0.0",
+    "@types/react-dom": "17.0.0",
+    "@types/react-router-dom": "5.1.7",
+    "@types/yup": "0.29.11",
     "awesome-typescript-loader": "5.2.1",
-    "axios": "0.19.0",
     "babel-core": "6.26.3",
     "babel-loader": "8.0.6",
-    "classnames": "2.2.6",
-    "connect": "3.7.0",
-    "console-emoji": "0.0.2",
-    "cypress": "3.3.0",
-    "dotenv": "8.1.0",
-    "eslint-plugin-prettier": "3.1.1",
-    "eslint-plugin-react-hooks": "^2.0.1",
+    "dotenv": "8.2.0",
     "fs-extra": "8.0.1",
     "gatsby": "2.15.19",
     "graphql-tools": "4.0.5",
     "husky": "^0.14.3",
     "ng-apimock": "1.4.8",
-    "node-sass": "4.12.0",
     "npm-run-all": "4.1.5",
-    "prettier": "1.18.2",
-    "pretty-quick": "1.11.1",
-    "react-html-parser": "2.0.2",
-    "react-scripts": "3.1.2",
-    "react-transition-group": "4.3.0",
-    "source-map-explorer": "2.0.1",
-    "tslint": "5.20.0",
-    "tslint-config-prettier": "1.18.0",
-    "tslint-eslint-rules": "5.4.0",
-    "tslint-react": "4.1.0",
-    "typescript": "3.5.2"
+    "prettier": "2.2.1",
+    "pretty-quick": "1.11.1"
   },
   "scripts": {
     "start": "run-p -r mockserver start:app",
-    "start:app": "react-scripts start",
+    "start:app": "react-scripts start --no-cache",
     "build": "react-scripts build",
     "build:netlify": "cp public/index.netlify.html public/index.html && node ./build.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "precommit": "pretty-quick --staged",
     "mockserver": "node ./mocks/mocks.js",
-    "storybook": "start-storybook -p 9001 -c .storybook",
-    "cypress:open": "cypress open",
     "prettier:all": "prettier --write \"**/*.{css,js,json,md,scss,ts,tsx,html}\"",
-    "build:dnn": "node ./node_modules/@erkenningen/build/scripts/create-dnn-module.js",
-    "build:prod": "npm-run-all build build:dnn",
-    "build:deploy": "node ./node_modules/@erkenningen/build/scripts/create-deploy-file.js",
-    "analyze": "source-map-explorer 'build/static/js/*.js'"
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
+    "codegen": "graphql-codegen --config codegen.yml"
   },
   "proxy": "http://localhost:4000",
   "browserslist": [
