--- a/netlify.toml
+++ b/netlify.toml
@@ -5,18 +5,27 @@
 [build]
   publish = "build"
   command = "npm run build:netlify"
-[build.environment]
-  YARN_VERSION = "1.3.2"
-  YARN_FLAGS = "--no-ignore-optional"
 [context.production.environment]
+  NODE_ENV = "production"
+  REACT_APP_ERKENNINGEN_GRAPHQL_API_URL = "https://api.erkenningen.nl/graphql"
+  REACT_APP_ERKENNINGEN_ADMIN_URL = "https://administratie.erkenningen.nl"
+  REACT_APP_ERKENNINGEN_SITE_TYPE = "content"
   GATSBY_ERKENNINGEN_GRAPHQL_API_URL = "https://api.erkenningen.nl/graphql"
   GATSBY_ERKENNINGEN_ADMIN_URL = "https://administratie.erkenningen.nl"
-  GATSBY_ERKENNINGEN_SITE_TYPE = "content"
-[context.develop.environment]
+  GATSBY_ERKENNINGEN_SITE_TYPE = "admin"
+[context.acceptance.environment]
+  NODE_ENV = "production"
+  REACT_APP_ERKENNINGEN_GRAPHQL_API_URL = "https://api.acceptatie.erkenningen.nl/graphql"
+  REACT_APP_ERKENNINGEN_ADMIN_URL = "https://administratie.acceptatie.erkenningen.nl"
+  REACT_APP_ERKENNINGEN_SITE_TYPE = "content"
   GATSBY_ERKENNINGEN_GRAPHQL_API_URL = "https://api.acceptatie.erkenningen.nl/graphql"
   GATSBY_ERKENNINGEN_ADMIN_URL = "https://administratie.acceptatie.erkenningen.nl"
-  GATSBY_ERKENNINGEN_SITE_TYPE = "content"
+  GATSBY_ERKENNINGEN_SITE_TYPE = "admin"
 [context.deploy-preview.environment]
+  NODE_ENV = "production"
+  REACT_APP_ERKENNINGEN_GRAPHQL_API_URL = "https://api.acceptatie.erkenningen.nl/graphql"
+  REACT_APP_ERKENNINGEN_ADMIN_URL = "https://administratie.acceptatie.erkenningen.nl"
+  REACT_APP_ERKENNINGEN_SITE_TYPE = "admin"
   GATSBY_ERKENNINGEN_GRAPHQL_API_URL = "https://api.acceptatie.erkenningen.nl/graphql"
   GATSBY_ERKENNINGEN_ADMIN_URL = "https://administratie.acceptatie.erkenningen.nl"
   GATSBY_ERKENNINGEN_SITE_TYPE = "content"
