--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "start": "run-p -r mockserver start:app",
     "start:app": "react-scripts start --no-cache",
     "build": "react-scripts build",
-    "build:netlify": "cp public/index.netlify.html public/index.html && node ./build.js",
+    "build:netlify": "cp public/index.netlify.html public/index.html && npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "precommit": "pretty-quick --staged",
