--- a/package.json
+++ b/package.json
@@ -6,23 +6,24 @@
     "@apollo/client": "3.3.6",
     "@erkenningen/config": "1.0.7",
     "@erkenningen/ui": "5.0.11",
+    "@fortawesome/fontawesome-free": "5.9.0",
     "@graphql-codegen/cli": "1.20.0",
     "@graphql-codegen/introspection": "1.18.1",
     "@graphql-codegen/typescript": "1.20.0",
     "@graphql-codegen/typescript-operations": "1.17.13",
     "@graphql-codegen/typescript-react-apollo": "2.2.1",
-    "@fortawesome/fontawesome-free": "5.9.0",
     "@reach/router": "1.3.4",
-    "eslint": "^7.17.0",
-    "eslint-config-prettier": "^7.1.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "7.22.0",
-    "eslint-plugin-react-hooks": "4.2.0",
-    "eslint-config-react-app": "6.0.0",
     "classnames": "2.2.6",
     "date-fns": "2.16.1",
     "es6-shim": "0.35.5",
+    "eslint": "^7.17.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-config-react-app": "6.0.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "7.22.0",
+    "eslint-plugin-react-hooks": "4.2.0",
     "formik": "2.2.6",
+    "gatsby-link": "^2.9.0",
     "graphql": "14.5.6",
     "graphql-tag": "2.10.1",
     "node-sass": "4.12.0",
@@ -30,14 +31,14 @@
     "primereact": "5.0.2",
     "query-string": "6.13.8",
     "react": "17.0.1",
-    "react-scripts": "4.0.1",
-    "react-transition-group": "4.3.0",
     "react-app-polyfill": "2.0.0",
     "react-dom": "17.0.1",
     "react-router-dom": "5.2.0",
-    "use-query-params": "1.1.9",
+    "react-scripts": "4.0.1",
+    "react-transition-group": "4.3.0",
     "ts-essentials": "^7.0.0",
     "typescript": "4.1.3",
+    "use-query-params": "1.1.9",
     "yup": "0.32.8"
   },
   "devDependencies": {
@@ -55,7 +56,6 @@
     "babel-loader": "8.0.6",
     "dotenv": "8.2.0",
     "fs-extra": "8.0.1",
-    "gatsby": "2.15.19",
     "graphql-tools": "4.0.5",
     "husky": "^0.14.3",
     "ng-apimock": "1.4.8",
