--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "react-app-polyfill": "2.0.0",
     "react-dom": "17.0.1",
     "react-router-dom": "5.2.0",
-    "react-scripts": "4.0.0",
+    "react-scripts": "4.0.3",
     "react-transition-group": "4.3.0",
     "ts-essentials": "^7.0.0",
     "typescript": "4.1.3",
@@ -64,7 +64,8 @@
     "pretty-quick": "1.11.1"
   },
   "scripts": {
-    "start": "run-p -r mockserver start:app",
+    "start": "react-scripts start",
+    "start:mock": "run-p -r mockserver start:app",
     "start:app": "react-scripts start --no-cache",
     "build": "react-scripts build",
     "build:netlify": "cp public/index.netlify.html public/index.html && npm run build",
