--- a/package.json
+++ b/package.json
@@ -2,67 +2,6 @@
   "name": "@erkenningen/module-search-course",
   "version": "0.0.1",
   "private": true,
-  "dependencies": {
-    "@apollo/client": "3.3.6",
-    "@erkenningen/config": "1.0.7",
-    "@erkenningen/ui": "5.0.11",
-    "@fortawesome/fontawesome-free": "5.9.0",
-    "@graphql-codegen/cli": "1.20.0",
-    "@graphql-codegen/introspection": "1.18.1",
-    "@graphql-codegen/typescript": "1.20.0",
-    "@graphql-codegen/typescript-operations": "1.17.13",
-    "@graphql-codegen/typescript-react-apollo": "2.2.1",
-    "@reach/router": "1.3.4",
-    "@types/react": "17.0.0",
-    "@types/react-dom": "17.0.0",
-    "@types/react-router-dom": "5.1.7",
-    "classnames": "2.2.6",
-    "date-fns": "2.16.1",
-    "es6-shim": "0.35.5",
-    "eslint": "^7.17.0",
-    "eslint-config-prettier": "^7.1.0",
-    "eslint-config-react-app": "6.0.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "7.22.0",
-    "eslint-plugin-react-hooks": "4.2.0",
-    "formik": "2.2.6",
-    "gatsby-link": "^2.9.0",
-    "graphql": "14.5.6",
-    "graphql-tag": "2.10.1",
-    "node-sass": "4.12.0",
-    "primeicons": "4.1.0",
-    "primereact": "5.0.2",
-    "query-string": "6.13.8",
-    "react": "17.0.1",
-    "react-app-polyfill": "2.0.0",
-    "react-dom": "17.0.1",
-    "react-router-dom": "5.2.0",
-    "react-scripts": "4.0.3",
-    "react-transition-group": "4.3.0",
-    "ts-essentials": "^7.0.0",
-    "typescript": "4.1.3",
-    "use-query-params": "1.1.9",
-    "yup": "0.32.8"
-  },
-  "devDependencies": {
-    "@erkenningen/build": "1.0.7",
-    "@types/classnames": "2.2.9",
-    "@types/jest": "24.0.18",
-    "@types/node": "12.0.8",
-    "@types/query-string": "6.3.0",
-    "@types/yup": "0.29.11",
-    "awesome-typescript-loader": "5.2.1",
-    "babel-core": "6.26.3",
-    "babel-loader": "8.0.6",
-    "dotenv": "8.2.0",
-    "fs-extra": "8.0.1",
-    "graphql-tools": "4.0.5",
-    "husky": "^0.14.3",
-    "ng-apimock": "1.4.8",
-    "npm-run-all": "4.1.5",
-    "prettier": "2.2.1",
-    "pretty-quick": "1.11.1"
-  },
   "scripts": {
     "start": "react-scripts start",
     "start:mock": "run-p -r mockserver start:app",
@@ -70,12 +9,56 @@
     "build": "react-scripts build",
     "build:netlify": "cp public/index.netlify.html public/index.html && npm run build",
     "test": "react-scripts test",
+    "lint": "eslint src --max-warnings=0",
     "eject": "react-scripts eject",
-    "precommit": "pretty-quick --staged",
     "mockserver": "node ./mocks/mocks.js",
     "prettier:all": "prettier --write \"**/*.{css,js,json,md,scss,ts,tsx,html}\"",
     "analyze": "source-map-explorer 'build/static/js/*.js'",
     "codegen": "graphql-codegen --config codegen.yml"
+  },
+  "dependencies": {
+    "@apollo/client": "3.4.16",
+    "@erkenningen/config": "1.0.7",
+    "@erkenningen/ui": "7.0.1",
+    "@graphql-codegen/cli": "^2.2.1",
+    "@graphql-codegen/introspection": "^2.1.0",
+    "@graphql-codegen/typescript": "^2.2.4",
+    "@graphql-codegen/typescript-operations": "^2.1.8",
+    "@graphql-codegen/typescript-react-apollo": "^3.1.6",
+    "@types/react": "17.0.37",
+    "@types/react-dom": "17.0.11",
+    "classnames": "2.3.1",
+    "date-fns": "2.27.0",
+    "es6-shim": "0.35.6",
+    "eslint": "^7.17.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "7.25.1",
+    "eslint-plugin-react-hooks": "4.2.0",
+    "formik": "2.2.9",
+    "graphql": "15.4.0",
+    "primeicons": "5.0.0",
+    "primereact": "7.0.1",
+    "react": "17.0.2",
+    "react-app-polyfill": "2.0.0",
+    "react-dom": "17.0.2",
+    "react-router-dom": "6.1.1",
+    "react-scripts": "4.0.3",
+    "react-transition-group": "4.4.2",
+    "ts-essentials": "^9.0.0",
+    "typescript": "4.4.2",
+    "use-query-params": "1.2.3",
+    "yup": "0.32.8"
+  },
+  "devDependencies": {
+    "@erkenningen/build": "1.0.7",
+    "@types/classnames": "2.3.1",
+    "@types/jest": "24.0.18",
+    "@types/node": "16.11.12",
+    "@types/yup": "0.29.13",
+    "ng-apimock": "1.4.9",
+    "npm-run-all": "4.1.5",
+    "prettier": "2.4.1"
   },
   "proxy": "http://localhost:4000",
   "browserslist": [
