--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "@apollo/client": "3.4.16",
     "@erkenningen/config": "^1.0.7",
-    "@erkenningen/ui": "7.0.2",
+    "@erkenningen/ui": "^7.0.2",
     "@graphql-codegen/cli": "^2.2.1",
     "@graphql-codegen/introspection": "^2.1.0",
     "@graphql-codegen/typescript": "^2.2.4",
