--- a/netlify.toml
+++ b/netlify.toml
@@ -1,31 +1,31 @@
 [[headers]]
-  for = "/*"
-  [headers.values]
-    ACCESS-CONTROL-ALLOW-ORIGIN = "*"
+for = "/*"
+[headers.values]
+ACCESS-CONTROL-ALLOW-ORIGIN = "*"
 [build]
-  publish = "build"
-  command = "npm run build:netlify"
+publish = "dist"
+command = "npm run build:netlify"
 [context.production.environment]
-  NODE_ENV = "production"
-  REACT_APP_ERKENNINGEN_GRAPHQL_API_URL = "https://api.erkenningen.nl/graphql"
-  REACT_APP_ERKENNINGEN_ADMIN_URL = "https://administratie.erkenningen.nl"
-  REACT_APP_ERKENNINGEN_SITE_TYPE = "content"
-  GATSBY_ERKENNINGEN_GRAPHQL_API_URL = "https://api.erkenningen.nl/graphql"
-  GATSBY_ERKENNINGEN_ADMIN_URL = "https://administratie.erkenningen.nl"
-  GATSBY_ERKENNINGEN_SITE_TYPE = "admin"
+NODE_ENV = "production"
+VITE_APP_ERKENNINGEN_GRAPHQL_API_URL = "https://api.erkenningen.nl/graphql"
+VITE_APP_ERKENNINGEN_ADMIN_URL = "https://administratie.erkenningen.nl"
+VITE_APP_ERKENNINGEN_SITE_TYPE = "admin"
+GATSBY_ERKENNINGEN_GRAPHQL_API_URL = "https://api.erkenningen.nl/graphql"
+GATSBY_ERKENNINGEN_ADMIN_URL = "https://administratie.erkenningen.nl"
+GATSBY_ERKENNINGEN_SITE_TYPE = "admin"
 [context.acceptance.environment]
-  NODE_ENV = "production"
-  REACT_APP_ERKENNINGEN_GRAPHQL_API_URL = "https://api.acceptatie.erkenningen.nl/graphql"
-  REACT_APP_ERKENNINGEN_ADMIN_URL = "https://administratie.acceptatie.erkenningen.nl"
-  REACT_APP_ERKENNINGEN_SITE_TYPE = "content"
-  GATSBY_ERKENNINGEN_GRAPHQL_API_URL = "https://api.acceptatie.erkenningen.nl/graphql"
-  GATSBY_ERKENNINGEN_ADMIN_URL = "https://administratie.acceptatie.erkenningen.nl"
-  GATSBY_ERKENNINGEN_SITE_TYPE = "admin"
+NODE_ENV = "production"
+VITE_APP_ERKENNINGEN_GRAPHQL_API_URL = "https://api.acceptatie.erkenningen.nl/graphql"
+VITE_APP_ERKENNINGEN_ADMIN_URL = "https://administratie.acceptatie.erkenningen.nl"
+VITE_APP_ERKENNINGEN_SITE_TYPE = "admin"
+GATSBY_ERKENNINGEN_GRAPHQL_API_URL = "https://api.acceptatie.erkenningen.nl/graphql"
+GATSBY_ERKENNINGEN_ADMIN_URL = "https://administratie.acceptatie.erkenningen.nl"
+GATSBY_ERKENNINGEN_SITE_TYPE = "admin"
 [context.deploy-preview.environment]
-  NODE_ENV = "production"
-  REACT_APP_ERKENNINGEN_GRAPHQL_API_URL = "https://api.acceptatie.erkenningen.nl/graphql"
-  REACT_APP_ERKENNINGEN_ADMIN_URL = "https://administratie.acceptatie.erkenningen.nl"
-  REACT_APP_ERKENNINGEN_SITE_TYPE = "admin"
-  GATSBY_ERKENNINGEN_GRAPHQL_API_URL = "https://api.acceptatie.erkenningen.nl/graphql"
-  GATSBY_ERKENNINGEN_ADMIN_URL = "https://administratie.acceptatie.erkenningen.nl"
-  GATSBY_ERKENNINGEN_SITE_TYPE = "content"
+NODE_ENV = "production"
+VITE_APP_ERKENNINGEN_GRAPHQL_API_URL = "https://api.acceptatie.erkenningen.nl/graphql"
+VITE_APP_ERKENNINGEN_ADMIN_URL = "https://administratie.acceptatie.erkenningen.nl"
+VITE_APP_ERKENNINGEN_SITE_TYPE = "admin"
+GATSBY_ERKENNINGEN_GRAPHQL_API_URL = "https://api.acceptatie.erkenningen.nl/graphql"
+GATSBY_ERKENNINGEN_ADMIN_URL = "https://administratie.acceptatie.erkenningen.nl"
+GATSBY_ERKENNINGEN_SITE_TYPE = "admin"
