--- a/package.json
+++ b/package.json
@@ -1,65 +1,63 @@
 {
   "name": "@erkenningen/module-search-course",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "vite --port 3031",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
     "start:mock": "run-p -r mockserver start:app",
-    "start:app": "react-scripts start --no-cache",
-    "build": "react-scripts build",
-    "build:netlify": "cp public/index.netlify.html public/index.html && npm run build",
-    "test": "react-scripts test",
+    "start:app": "npm run dev",
+    "build:netlify": "cp index.netlify.html index.html && npm run build",
     "lint": "eslint src --max-warnings=0",
-    "eject": "react-scripts eject",
-    "mockserver": "node ./mocks/mocks.js",
+    "mockserver": "DEBUG=ng-apimock:* node ./mocks/mocks.mjs",
     "prettier:all": "prettier --write \"**/*.{css,js,json,md,scss,ts,tsx,html}\"",
     "analyze": "source-map-explorer 'build/static/js/*.js'",
     "codegen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
-    "@apollo/client": "3.4.16",
-    "@erkenningen/config": "^1.0.7",
-    "@erkenningen/ui": "^7.0.2",
-    "@graphql-codegen/cli": "^2.2.1",
-    "@graphql-codegen/introspection": "^2.1.0",
-    "@graphql-codegen/typescript": "^2.2.4",
-    "@graphql-codegen/typescript-operations": "^2.1.8",
-    "@graphql-codegen/typescript-react-apollo": "^3.1.6",
-    "@types/react": "17.0.37",
-    "@types/react-dom": "17.0.11",
-    "classnames": "2.3.1",
-    "date-fns": "2.27.0",
-    "es6-shim": "0.35.6",
-    "eslint": "^7.17.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "7.25.1",
-    "eslint-plugin-react-hooks": "4.2.0",
-    "formik": "2.2.9",
-    "graphql": "15.4.0",
-    "primeicons": "5.0.0",
-    "primereact": "7.0.1",
-    "react": "17.0.2",
-    "react-app-polyfill": "2.0.0",
-    "react-dom": "17.0.2",
-    "react-router-dom": "6.1.1",
-    "react-scripts": "4.0.3",
-    "react-transition-group": "4.4.2",
-    "ts-essentials": "^9.0.0",
-    "typescript": "4.4.2",
-    "use-query-params": "1.2.3",
-    "yup": "0.32.8"
+    "@apollo/client": "3.9.7",
+    "@erkenningen/config": "^2.0.0",
+    "@erkenningen/ui": "^8.0.2",
+    "@graphql-codegen/cli": "^2.16.5",
+    "@graphql-codegen/introspection": "^2.2.3",
+    "@graphql-codegen/typescript": "^2.8.8",
+    "@graphql-codegen/typescript-operations": "^2.5.13",
+    "@graphql-codegen/typescript-react-apollo": "^3.3.7",
+    "@types/react": "18.2.66",
+    "@types/react-dom": "18.2.22",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "classnames": "2.5.1",
+    "date-fns": "3.5.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "7.34.0",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "formik": "2.4.5",
+    "graphql": "15.8.0",
+    "primeicons": "6.0.1",
+    "primereact": "10.5.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "6.22.3",
+    "react-transition-group": "4.4.5",
+    "ts-essentials": "^9.4.1",
+    "typescript": "5.4.2",
+    "use-query-params": "2.2.1",
+    "vite": "^5.1.6",
+    "yup": "1.4.0"
   },
   "devDependencies": {
+    "@ng-apimock/core": "^3.11.2",
+    "@ng-apimock/dev-interface": "^3.3.1",
     "@types/classnames": "2.3.1",
-    "@types/jest": "24.0.18",
-    "@types/node": "16.11.12",
-    "@types/yup": "0.29.13",
-    "ng-apimock": "1.4.9",
+    "@types/node": "20.11.28",
+    "express": "^4.18.3",
     "npm-run-all": "4.1.5",
-    "prettier": "2.4.1"
+    "prettier": "3.2.5"
   },
-  "proxy": "http://localhost:4000",
   "browserslist": [
     ">0.2%",
     "not dead",
